# nit3dyne-ex

./: CMakeLists.txt  README.md
res/mesh/: axe.glb  chair.glb  cube.glb  desk.glb  hand.glb  m4a1.glb  plane.glb  speaker.glb  sphere.glb  stg44.glb  switch.glb
src/: basic.cpp  billboard.cpp  colored.cpp  environment.cpp  fps_scene.cpp  lines_transforms.cpp  skinning.cpp
